--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Study Aura</title>
+  <title>StudyNotion</title>
   <link rel="icon" type="image/x-icon" href="./Logo-Small-Dark.png">
 </head>
 
